--- a/homework-7/homework-7/Info.plist
+++ b/homework-7/homework-7/Info.plist
@@ -43,7 +43,10 @@
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>external-accessory</string>
+		<string>fetch</string>
 		<string>processing</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
