--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ practice2905/Pods/Target Support Files/SnapKit/SnapKit.debug.xcconfig
 practice2905/Pods/Target Support Files/SnapKit/SnapKit.modulemap
 practice2905/Pods/Target Support Files/SnapKit/SnapKit.release.xcconfig
 homework-7/Pods
+homework-8/Pods
